# iRM_Autonomy_2020

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Mechanicus Prayer.please pray before programming.txt  README.md  Read Labelme.ipynb  get_training_set.py  patch.ipynb  patch.py  requirements.txt  train.py  visualize_training_set.py
.github/workflows/: continuous-integration.yml
Website/: aboutrobomaster.html  aboutus.html  index.html  members.html
Website/Design/Font/MyFontsWebfontsKit/: MyFontsWebfontsKit.css  MyFontsWebfontsKit_unhinted.css  StartHere.html
Website/Design/Font/MyFontsWebfontsKit/webfonts/: 357759_0_0.eot  357759_1_0.eot
Website/Design/Image_Members/: Readme.txt
Website/Design/Image_Sponsors/: Readme.txt
cmake/: find_boost_python.cmake  irm_cmake_utils.cmake
dnn/: calculate_map.py  debugger.ipynb  detection_demo.py  parameters.py  train_tiny.py  visualizer.ipynb
dnn/POC_synthetic_segmentation/generation/: readme.md  scene_setup_transparent.py
dnn/POC_synthetic_segmentation/training/: fcn.py  img_utils.py  readme.md  train.py  unet.py
dnn/augmentation/: detection.py
dnn/data/augmentation/: detection.py  image.py
dnn/data/converters/: README.md  TFRecord_visualizer.ipynb  get_purdue.py  purdue.py  roco.py  roco_visualizer.ipynb  utils.py
dnn/examples/: network.py  params.py
dnn/jetson_deploy/: .inference_ort.py.swp  inference_ort.py  inference_tf.py  inference_trt.py
dnn/model/: yolov3-tiny.py  yolov3.py  yolov3_tiny.py
dnn/onnx_convert/: change_opset.py  convert.py  convert.sh  convert_trt.py  inspect_onnx.py  weights2savemodel.py
dnn/utils/: .inference_utils.py.swp  Sanity.ipynb  dataLoader.py  inference_utils.py  mem.py  params.py  yolo_encoder.py
examples/: CMakeLists.txt
examples/pybind/: example_class.cc  example_hello.cc
examples/tests/: pybind_example_test.py
utils/: CMakeLists.txt
utils/boost_python/: CMakeLists.txt  example_class.cc  example_hello.cc
utils/camera/: CMakeLists.txt  camera_driver.cc  camera_driver.h
utils/communication/: CMakeLists.txt  crc.cc  protocol.cc  protocol.h  serial.cc  serial.h
utils/executables/: lcm_file_logger.cc
utils/gtest_utils/: CMakeLists.txt  test_base.cc  test_base.h
utils/lcm_utils/: CMakeLists.txt  logging.cc  logging.h
utils/lcmtypes/: example.lcm
utils/logging/: CMakeLists.txt  trivial.cc  trivial.h
utils/tests/: boost_python_example_test.py  camera_test.cc  lcm_utils_test.cc  protocol_test.cc  timing_test.cc
utils/timing/: CMakeLists.txt  tic_toc.cc  tic_toc.h
utils/timing/lcmtypes/: tic_toc.lcm
